clusters/proxmox-home/apps/homebox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/component: namespace
