clusters/proxmox-home/apps/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: box-ingress-mtls
  labels:
    app.kubernetes.io/name: box-ingress-mtls
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - box.mgsds.com
  rules:
    - host: box.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebox
                port:
                  number: 7745
